--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'  # Set your Node.js version here
+          node-version: '23'  # Set your Node.js version here
 
       - name: Install dependencies and build
         run: |
@@ -33,4 +33,4 @@ jobs:
           
       - name: Deploy to Firebase Hosting
         run: |
-          firebase deploy --only hosting --project amara--voice
+          firebase deploy --only hosting --project amara--voice --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_AMARA__VOICE }}
