--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -10,27 +10,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout repository to the GitHub runner
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      # Set up Node.js for the build process
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '23'  # Set your Node.js version here
 
+      # Install dependencies and build the frontend
       - name: Install dependencies and build
         run: |
           npm install
           npm run build  # Run your build script (make sure it's working locally first)
 
+      # Install Firebase CLI on the runner
       - name: Set up Firebase CLI
         run: |
           curl -sL https://firebase.tools | bash
           firebase --version  # Check Firebase CLI version
 
-      - name: Set GOOGLE_APPLICATION_CREDENTIALS environment variable
-        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_AMARA__VOICE }}" > $GITHUB_ENV
-          
-      - name: Deploy to Firebase Hosting
+      # Create the service account file for authentication
+      - name: Create service account file
+        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_AMARA__VOICE }}" > $HOME/firebase-service-account.json
+
+      # Set up authentication with the service account
+      - name: Authenticate using service account
         run: |
-          firebase deploy --only hosting --project amara--voice --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_AMARA__VOICE }}
+          export GOOGLE_APPLICATION_CREDENTIALS=$HOME/firebase-service-account.json
+          firebase --project amara--voice deploy --only hosting
+
+      # Clean up the service account file after deployment
+      - name: Clean up
+        run: rm $HOME/firebase-service-account.json
