--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -3,14 +3,14 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  # Trigger deployment on push to the main branch
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository to the GitHub runner
+      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -18,42 +18,46 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '23'  # Set your Node.js version here (adjust to your project's needs)
+          node-version: '23'
 
-      # Step 3: Install dependencies (make sure your app works locally before this step)
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # Step 4: Build the Next.js app (or whatever build command is necessary for your app)
-      - name: Build Next.js app
-        run: npm run build  # You can adjust this if you use another framework or build process
+      # Step 4: Build the app
+      - name: Build the app
+        run: npm run build
 
       # Step 5: Install Firebase CLI
       - name: Install Firebase CLI
         run: |
           curl -sL https://firebase.tools | bash
-          firebase --version  # Check Firebase CLI version to ensure it's installed
+          firebase --version
 
-      # Step 6: Set up the Firebase service account key from GitHub secrets
+      # Step 6: Create the Firebase service account file from GitHub secrets
       - name: Create service account file
         run: |
           echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_AMARA__VOICE }}" > $HOME/firebase-service-account.json
 
-      # Step 7: Set GOOGLE_APPLICATION_CREDENTIALS environment variable to authenticate
-      - name: Set GOOGLE_APPLICATION_CREDENTIALS environment variable
+      # Step 7: Set GOOGLE_APPLICATION_CREDENTIALS environment variable to the service account file
+      - name: Set GOOGLE_APPLICATION_CREDENTIALS
         run: |
           export GOOGLE_APPLICATION_CREDENTIALS=$HOME/firebase-service-account.json
 
-      # Step 8: Authenticate with Firebase (using service account)
+      # Step 8: Authenticate using the service account file
       - name: Authenticate with Firebase using service account
         run: |
-          firebase use --add --project amara--voice  # Replace with your Firebase project ID
+          firebase login:ci --token ${{ secrets.FIREBASE_CI_TOKEN }}
 
-      # Step 9: Deploy the app to Firebase Hosting
-      - name: Deploy to Firebase Hosting
+      # Step 9: Set the Firebase project
+      - name: Set Firebase project
         run: |
-          firebase deploy --only hosting
+          firebase use --add --project "amara--voice"  # Your Firebase project ID
 
-      # Step 10: Clean up service account file after deployment
+      # Step 10: Deploy to Firebase Hosting
+      - name: Deploy to Firebase Hosting
+        run: firebase deploy --only hosting
+
+      # Step 11: Clean up service account file
       - name: Clean up service account file
         run: rm $HOME/firebase-service-account.json
