--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -34,7 +34,7 @@ jobs:
           curl -sL https://firebase.tools | bash
           firebase --version
 
-      # Step 6: Create the Firebase service account file from GitHub secrets
+      # Step 6: Create Firebase service account file from GitHub secrets
       - name: Create service account file
         run: |
           echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_AMARA__VOICE }}" > $HOME/firebase-service-account.json
@@ -42,12 +42,19 @@ jobs:
       # Step 7: Set GOOGLE_APPLICATION_CREDENTIALS environment variable
       - name: Set GOOGLE_APPLICATION_CREDENTIALS
         run: |
-          export GOOGLE_APPLICATION_CREDENTIALS=$HOME/firebase.json
+          export GOOGLE_APPLICATION_CREDENTIALS=$HOME/firebase-service-account.json
+          echo "GOOGLE_APPLICATION_CREDENTIALS set."
 
-      # Step 8: Deploy to Firebase Hosting (directly specify the project)
+      # Step 8: Authenticate using the service account
+      - name: Authenticate with Firebase using service account
+        run: |
+          firebase login --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
+
+      # Step 9: Deploy to Firebase Hosting
       - name: Deploy to Firebase Hosting
-        run: firebase deploy --project amara--voice --only hosting
+        run: |
+          firebase deploy --project amara--voice --only hosting
 
-      # Step 9: Clean up service account file
+      # Step 10: Clean up service account file
       - name: Clean up service account file
-        run: rm $HOME/firebase.json
+        run: rm $HOME/firebase-service-account.json
